Logout backend, User route, UserModalService to find by id
